[package]
name = "listener_poll"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
keywords = ["poll", "epoll", "listen", "timeout"]
categories = ["network-programming"]
description = "Poll with timeout for TcpListener and UnixListener"
readme = "README.md"
repository = "https://github.com/AlexanderSchuetz97/listener_poll"
rust-version = "1.66.0"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = ["Win32_Networking_WinSock"]